--- a/.github/workflows/publish_to_pub.yml
+++ b/.github/workflows/publish_to_pub.yml
@@ -11,11 +11,11 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Content
         id: check_files
-        uses: andstor/file-existence-action@v1
+        uses: andstor/file-existence-action@v3
         with:
           files: "LICENSE, README.md, CHANGELOG.md, CONTRIBUTING.md"
 
@@ -37,7 +37,7 @@ jobs:
     needs: check_branch_content
     uses: surfstudio/flutter-ci-workflows/.github/workflows/publish_to_pub.yml@main
     with:
-      PANA_TOTAL: '100'
+      PANA_TOTAL: "100"
     secrets:
       PUB_CREDENTIAL_JSON: ${{ secrets.SURF_PUB_CREDENTIAL_JSON }}
       PUB_OAUTH_ACCESS_TOKEN: ${{ secrets.SURF_PUB_OAUTH_ACCESS_TOKEN }}
