--- a/lib/dart.yaml
+++ b/lib/dart.yaml
@@ -139,7 +139,9 @@ dart_code_metrics:
     - move-variable-outside-iteration
     - newline-before-return
     - no-boolean-literal-compare
-    - no-empty-block
+    - no-empty-block:
+        exclude:
+          - test/**
     - no-equal-conditions
     - no-equal-nested-conditions
     - no-equal-switch-case
